--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "^49.0.23",
+    "expo-location": "^17.0.1",
     "expo-status-bar": "~1.6.0",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.72.10",
-    "react-native-screens": "~3.22.0",
-    "react-native-safe-area-context": "4.6.3"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
