--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.72.10",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "^15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
